--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "konva": "^10.0.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "react": "19.1.0",
