--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@langchain/community": "^0.3.56",
+    "@langchain/core": "^0.3.77",
+    "@langchain/langgraph": "^0.4.9",
+    "@langchain/openai": "^0.6.13",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slider": "^1.3.6",
@@ -29,7 +34,9 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jsonrepair": "^3.13.0",
     "konva": "^10.0.2",
+    "langchain": "^0.3.34",
     "lodash": "^4.17.21",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
@@ -38,6 +45,7 @@
     "react-dom": "19.1.0",
     "react-konva": "^19.0.10",
     "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.9",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
