--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@playwright/test": "^1.55.1",
     "@tailwindcss/postcss": "^4",
     "@types/file-saver": "^2.0.7",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-color": "^3.0.13",
