--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
-    "gif-encoder-2": "^1.0.5",
+    "gif.js": "^0.2.0",
     "jsonrepair": "^3.13.0",
     "jszip": "^3.10.1",
     "konva": "^10.0.2",
@@ -65,6 +65,7 @@
     "@playwright/test": "^1.55.1",
     "@tailwindcss/postcss": "^4",
     "@types/file-saver": "^2.0.7",
+    "@types/gif.js": "^0.2.5",
     "@types/lodash": "^4.17.20",
     "@types/node": "^20",
     "@types/react": "^19",
