build: fix elsint scripts

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "next build --turbopack",
     "build:workers": "tsc -p tsconfig.worker.json",
     "watch:workers": "tsc -p tsconfig.worker.json --watch",
-    "lint": "eslint . --ext .ts,.tsx --ignore-path .gitignore",
-    "lint:fix": "eslint . --ext .ts,.tsx --fix --ignore-path .git",
+    "lint": "eslint . --ext .ts,.tsx",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "format": "prettier --write '**/*.{ts,tsx,css}' --ignore-path .gitignore",
     "prepare": "husky"
   },
